--- a/css/styles.css
+++ b/css/styles.css
@@ -757,8 +757,8 @@ hr {
 }
 
 
-/* --- SIGN IN PAGE --- */
-.signin-page {
+/* --- SIGN IN & LOGIN PAGES --- */
+.signin-page, .login-page {
   min-height: 100vh;
   background-image: url('../images/imagenesdefonfo/soberbioBistroistro.jpg');
   background-size: cover;
@@ -795,4 +795,9 @@ hr {
   width: 100%;
   padding: 10px;
   margin-top: 16px;
+}
+
+.signin-form .form-text {
+  margin-top: 12px;
+  text-align: center;
 }
